docs: add section Fehlermanagement

--- a/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
@@ -9,6 +9,7 @@
 \input{part four/Management des QS-Prozesses/testteam}
 \input{part four/Management des QS-Prozesses/testprozess}
 \input{part four/Management des QS-Prozesses/testdokumentation}
+\input{part four/Management des QS-Prozesses/fehlermanagement}
 
 \newpage
 
