docs: add section Fortschrittsverfolgung

--- a/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
@@ -10,6 +10,7 @@
 \input{part four/Management des QS-Prozesses/testprozess}
 \input{part four/Management des QS-Prozesses/testdokumentation}
 \input{part four/Management des QS-Prozesses/fehlermanagement}
+\input{part four/Management des QS-Prozesses/fortschrittsverfolgung}
 
 \newpage
 
