--- a/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
+++ b/docs/repetitorium/part four/Management des QS-Prozesses/index.tex
@@ -11,6 +11,5 @@
 \input{part four/Management des QS-Prozesses/testdokumentation}
 \input{part four/Management des QS-Prozesses/fehlermanagement}
 \input{part four/Management des QS-Prozesses/fortschrittsverfolgung}
-
 \newpage
-
+\input{part four/Management des QS-Prozesses/zusammenfassung}
