docs: update wording

--- a/docs/repetitorium/part four/Testende Verfahren/systemtest.tex
+++ b/docs/repetitorium/part four/Testende Verfahren/systemtest.tex
@@ -6,7 +6,7 @@
 \end{tcolorbox}
 
 \noindent
-Der \textbf{Systemtest} wird manchmal auch Werkstest genannt.
+Der \textbf{Systemtest} wird manchmal auch \textbf{Werkstest} genannt (s. Abschnitt~\ref{sec:v-modell}).
 
 \subsubsection*{Durchführung}
 Art oder Details der Implementierung werden im Systemtest nicht berücksichtigt und häufig von für diese Testart geschulten Testern durchgeführt. Partnersysteme, mit denen das zu testende System interagiert, werden meist simuliert.
