--- a/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/grundlegende arten von qualitätssichernden maßnahmen.tex
+++ b/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/grundlegende arten von qualitätssichernden maßnahmen.tex
@@ -22,11 +22,11 @@ Bei \textbf{konstruktiven Verfahren} werden \textbf{organisatorische} und \textb
 
 \begin{itemize}
     \item \textbf{Organisatorische Verfahren}: Richtlinien, Checklisten, Standards. Beispiel: Vorlage für User Storys, die alle im Projekt verwenden müssen.
-    \item \textbf{technische Verfahren}: technische Qualitätsmaßnahmen wie Methoden, Werkzeuge, Einsatz anderer Programmeirpsrachen. Beispiel: Einsatz von Tools zur Einhaltung von Coding-Standards.
+    \item \textbf{technische Verfahren}: technische Qualitätsmaßnahmen wie Methoden, Werkzeuge, Einsatz anderer Programmiersprachen. Beispiel: Einsatz von Tools zur Einhaltung von Coding-Standards.
 \end{itemize}
 
 \noindent
-\textbf{Konstruktive Maßnahmen} sind vor allem Gegensatnd des Projektmanagements, weshalb \textit{Wedemann} sie nicht weitere thematisiert (vgl.~\cite[9]{Wed09c}).
+\textbf{Konstruktive Maßnahmen} sind vor allem Gegenstand des Projektmanagements, weshalb \textit{Wedemann} sie nicht weitere thematisiert (vgl.~\cite[9]{Wed09c}).
 
 
 \subsection*{Analytische Maßnahmen}
@@ -39,7 +39,7 @@ bei \textbf{analytischen Maßnahmen} werden \textbf{analysierende} und \textbf{t
         \item \textbf{manuelle Maßnahmen}: Menschen \textit{lesen} und \textit{analysieren} Prüfgegenstände: Bspw. indem User Storys gegengelesen werden, oder ein objektorientierter Entwurf überprüft wird
         \item \textbf{werkzeuggestützte Maßnahmen}: Analysen werden maschinell von Software durchgeführt: Bspw. das Überprüfen im Quellcode auf typische Defekte (leere catch-Blöcke)
         \item \textbf{Verifikation}: Nachweis der Richtigkeit von Quellcode durch mathematische Verfahren\footnote{
-        \textit{Wedemann} weist darauf hin, dass dieses Verfahren keine allgemeine Relevanz hat und nur auf speziellen Gebieten eingesetzt wird: Es wurde in der Praxis zumeist durch das werkzeuggestützte VErfahren der \textit{abstrakten Interpretation} abgelöst (vgl.~\cite[9]{Wed09c})
+        \textit{Wedemann} weist darauf hin, dass dieses Verfahren keine allgemeine Relevanz hat und nur auf speziellen Gebieten eingesetzt wird: Es wird in der Praxis zumeist durch das werkzeuggestützte Verfahren der \textit{abstrakten Interpretation} abgelöst (vgl.~\cite[9]{Wed09c}; s. a. Abschnitt~\ref{subsec:abstrakte-interpretation})
         }
     \end{itemize}
     \item  \textbf{testende Maßnahmen}: Prüfgegenstand wird in Betrieb genommen, das \textbf{beobachtete Verhalten} wird mit dem \textbf{spezifizierten Verhalten} verglichen (\textbf{dynamischer Test})
@@ -52,4 +52,4 @@ bei \textbf{analytischen Maßnahmen} werden \textbf{analysierende} und \textbf{t
 
 \noindent
 Der Test ist nicht immer die effektivste Form, Defekte zu verhindern: Lesen des Quelltexts oder Werkzeuge eignen sich oft sehr gut: Ein Test kann außerdem nicht bestimmte Eigenschaften des Quellcodes sicherstellen, wie die \textbf{Wartbarkeit}.\\
-Dokumente und Modelle lassen sich garnicht testen.
+``Dokumente und Modelle lassen sich garnicht testen`` (\cite[10]{Wed09c}).
