--- a/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
+++ b/docs/repetitorium/part four/Typen von Qualitätsmaßnahmen/v-modell.tex
@@ -10,13 +10,13 @@ Das \textbf{V-Modell} (s. Abbildung~\ref{fig:v-modell}) wurde als Hilfestellung 
 
 \noindent
 Wie auf Abbildung~\ref{fig:v-modell} zu sehen ist stehen auf der linken Seite die bekannten Phasen des Wasserfallmodells.
-Beim Übergang dieser Phasen werden die entstandenen Modelle oder Dokumente überprüft (\textit{Review}, die Übergänge werden auch als \textit{Qualitätstor} bezeichnet (vgl.~\cite[11]{Wed09c})), bevor mit der nächsten Phase begonnen wird.
+Beim Übergang dieser Phasen werden die entstandenen Modelle oder Dokumente überprüft (\textit{Review}; die Übergänge werden auch als \textit{Qualitätstor} bezeichnet (vgl.~\cite[11]{Wed09c})), bevor mit der nächsten Phase begonnen wird.
 
 \begin{itemize}
-    \item Nach der \textbf{Realisierung} werden einzelne Klassen oder Module im Klassen- /Modultest getestet - dieser text wird auch \textbf{Komponententest} genannt.
-    \item Danach werden die gestesteten Komponenten \textit{integriert} und gemeinsam getestet, was auf Basis des \textbf{Entwurfs} geschieht (\textbf{Integrationstests}).
+    \item Nach der \textbf{Realisierung} werden einzelne Klassen oder Module im Klassen- /Modultest getestet - dieser Test wird auch \textbf{Komponententest} genannt.
+    \item Danach werden die getesteten Komponenten \textit{integriert} und gemeinsam getestet, was auf Basis des \textbf{Entwurfs} geschieht (\textbf{Integrationstests}).
     \item Nach der Integration wird das gesamte System in (möglichst) realer Umgebung getestet (\textbf{Systemtest} bzw. \textbf{Werkstest}).\\
-    Grundlage für die Systemtests sind die Ergebnisse aus der Analyse.
+    Grundlage für die Systemtests sind die Ergebnisse aus der \textbf{Analyse}.
     \item Im Anschluss wird das System  vom Kunden im \textbf{Abnahmetest} abgenommen, der auf Basis vertraglicher Vereinbarungen, also insb. der gemeinsam erarbeiteten \textbf{Anforderungen}, fußt
 \end{itemize}
 
@@ -28,12 +28,22 @@ Die in diesem Zusammenhang verwendeten Begriffe \textbf{Verifikation} und \textb
     \item \textbf{Validierung}: Es wird beurteilt, ob ein System oder eine Komponente während bzw. am Ende des Entwicklunsgprozesses die spezifizierten Anforderungen erfüllt (\textbf{Abnahmetest})
 \end{itemize}
 
+\begin{tcolorbox}[colback=white]
+    \blockquote[{\cite[554]{Bal08}}]{
+    Umgangssprachlich bedeuten beide Begriffe folgendes:
+    \begin{itemize}
+        \item Verifikation: "Wird ein korrektes Produkt entwickelt?"
+        \item Validierung: "Wird das richtige Produkt entwickelt?"
+    \end{itemize}
+    }
+\end{tcolorbox}
+
 \subsection*{Inhalt der Testphasen}
-Die \textbf{Modul-}, \textbf{Integrations-}, \textbf{System-} und \textbf{Abnahmetests}, beinhalten neben tests auch andere qualitätssichernde Maßnahmen:
+Die \textbf{Modul-}, \textbf{Integrations-}, \textbf{System-} und \textbf{Abnahmetests} beinhalten neben Tests auch andere qualitätssichernde Maßnahmen:
 
 \begin{itemize}
     \item \textbf{Modultest} beinhaltet neben dynamischen Tests auch werkzeuggestützte und manuelle Analysen
-    \item \textbf{System-} bzw. \textbf{Integrationstests}: Es werden meistens nur Tests durchgeführt. Es finden aber auch Analysewerkzeuge ihren Einsatz, die bestimmte Qualitätsforderungen, wie z.B. die Wartbarkeit, global zu überprüfen
+    \item \textbf{System-} bzw. \textbf{Integrationstests}: Es werden meistens nur Tests durchgeführt. Es finden aber auch Analysewerkzeuge ihren Einsatz, die bestimmte Qualitätsforderungen, wie z.B. die Wartbarkeit, global überprüfen
     \item \textbf{System-} bzw. \textbf{Abnahmetests} beinhalten manuelle Verfahren, bspw. zur Überprüfung von Handbüchern (Benutzerhilfen, Installationsanleitungen)
 \end{itemize}
 
@@ -45,11 +55,13 @@ Die \textbf{Modul-}, \textbf{Integrations-}, \textbf{System-} und \textbf{Abnahm
 Das V-Modell besitzt dieselben Probleme wie das \textbf{Wasserfallmodell}\footnote{
 s. hierzu auch Abschnitt~\ref{sec:grenzen-des-wasserfallmodells}
 }, da es eine Erweiterung bzw. Präzisierung des Wasserfallmodells darstellt (vgl.~\cite[12]{Wed09c}).\\
-Allerdings ist es auch nützlich im Zusammenhang mit anderen Vorgehensmodellen (z.b. agilen Vorgehensmodellen): Insb. Modul- und INtegrationstests werden auch in iterativen Modellen während der Entwicklung genutzt, außerdem wird auch bei agilen Projekten vor Auslieferung noch eine Systemtestphase vorgeschaltet, und mit Abnahmetests sind Kunden in allen Fällen gut beraten.\\
+Allerdings ist es auch nützlich im Zusammenhang mit anderen Vorgehensmodellen (z.b. agilen Vorgehensmodellen): Insb. Modul- und Integrationstests werden auch in iterativen Modellen während der Entwicklung genutzt, außerdem wird auch bei agilen Projekten vor Auslieferung noch eine Systemtestphase vorgeschaltet, und mit Abnahmetests sind Kunden in allen Fällen gut beraten.\\
 
 \noindent
 Es zeigt sich:
 
-\blockquote[{\cite[12]{Wed09c}}]{
-    Die Konzepte und Begriffe des V-Modells sind also von allgemeinerer Gültigkeit als das konkrete Vorgehen.
-}
+\begin{tcolorbox}[colback=white]
+    \blockquote[{\cite[12]{Wed09c}}]{
+        Die Konzepte und Begriffe des V-Modells sind also von allgemeinerer Gültigkeit als das konkrete Vorgehen.
+    }
+\end{tcolorbox}
