docs: update wording and formatting and add figure

--- a/docs/repetitorium/part four/Manuelle Verfahren/andere verfahren.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/andere verfahren.tex
@@ -6,7 +6,7 @@
         \item es wird ähnlich wie bei der Inspektion vorgegangen, aber weniger formalisiert
         \item der Prüfgegenstand kann auf die Reviewer aufgeteilt werden\footnote{
             bei der Inspektion untersucht jeder Gutachter den gleichen Prüfgegenstand
-        }.\\
+        }
         \item in der Review-Sitzung gibt es keinen \testbf{Leser}, der Moderator führt informell durch den Prüfgegenstand
         \item i.d.R. werden keine Metriken ermittelt
     \end{itemize}
@@ -29,13 +29,18 @@
     \begin{itemize}
         \item kann als spezielles Verfahren der manuellen Prüfung angesehen werden
         \item zwei Personen arbeiten gleichzeitig an einem Arbeitsplatz.
-        \textit{Beck und Andres} charakterisieren die Aufgaben beteiligter Programmierer in \cite[42]{BA04}:
-        \begin{itemize}
-            \item Keep each other on task.
-            \item Brainstorm refinements to the system.
-            \item Clarify ideas.
-            \item Take initiative wen their partner is stuck, thus lowering frustration.
-            \item Hold each other accountable to the team's practice.
-        \end{itemize}
     \end{itemize}
 \end{itemize}
+
+\noindent
+\textit{Beck und Andres} charakterisieren die Aufgaben beteiligter Programmierer beim Pair Programming u.a. durch:
+
+\blockquote[{~\cite[42]{BA04}}]{
+    \begin{itemize}
+        \item Keep each other on task.
+        \item Brainstorm refinements to the system.
+        \item Clarify ideas.
+        \item Take initiative when their partner is stuck, thus lowering frustration.
+        \item Hold each other accountable to the team's practice.
+    \end{itemize}
+}
