--- a/docs/repetitorium/part four/Manuelle Verfahren/inspektion.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/inspektion.tex
@@ -18,7 +18,8 @@ Die Ergebnisse werden in einer anschließenden \textbf{Inspektionssitzung} bespr
 \subsection{Inspektionsteam}
 
 \begin{itemize}
-    \item \textbf{Moderator}: organisiert die Vorgänge der Inspektion, moderiert die Inspektionssitzung. Hat im besten Fall bereits Erfahungen mit Inspektionen gemacht und hat Kenntnisse in Gesprächsmoderation und strukturierter Arbeit mit Gruppen.
+    \item \textbf{Moderator}: organisiert die Vorgänge der Inspektion, moderiert die Inspektionssitzung.
+    Hat im besten Fall bereits Erfahrungen mit Inspektionen gemacht und hat Kenntnisse in Gesprächsmoderation und strukturierter Arbeit mit Gruppen.
     \item \textbf{Autor(en)}: stehen während der Inspektion zur Beantwortung von Fragen zur Verfügung.
     \item \textbf{Inspektoren}: untersuchen den Prüfgegenstand, müssen also zu einer fachlichen Beurteilung in der Lage sein. Sind keine Vorgesetzten der Autoren.
     \item \textbf{Leser}: Einer der Inspektoren nimmt \textbf{während der Inspektionssitzung} die Rolle des \textbf{Lesers} ein, der durch den Prüfgegenstand führt.
@@ -42,8 +43,18 @@ Bei größeren Gruppen (mehrere Inspektoren bzw. mehrere Autoren) übernimmt ein
     \item eine \textbf{Freigabe} des Prüfgegenstandes erfolgt, falls nur wenige Defekte gefunden worden, und der \textbf{Moderator} die Behebung überprüft hat; gravierende Defekte bedingen eine erneute Inspektionssitzung
 \end{enumerate}
 
-\noindent
+\begin{tcolorbox}[colback=white]
 300 Programmzeilen oder 50 Seiten sind ein gutes Maß für den Umfang des Prüfgegenstandes für eine Inspektionssitzung (vgl.~\cite[20]{Wed09c}).\\
+\end{tcolorbox}
+
+
+\begin{figure}
+    \centering
+    \includegraphics[scale=0.4]{part four/Manuelle Verfahren/img/inspektion}
+    \caption{Skizzenhafte Darstellung des Ablaufs von Inspektionen und der damit verbundenen Rollen und ihrer Aufgaben. (Quelle: eigene)}
+    \label{fig:inspektion}
+\end{figure}
+
 
 \noindent
 Eine Gefahr für den Erfolg von Inspektionssitzungen ist gegeben dadurch, dass Inspektoren die Defekte nicht in der Inspektionssitzung bekannt geben, um den \textbf{Autor} nicht zu kritisieren.\\
@@ -64,12 +75,13 @@ Prinzipiell sind \textbf{zwei Protokolle} zu erstellen:
 
 \begin{enumerate}
     \item das erste Protokoll dient dazu, \textbf{Ergebnisse der Inspektionssitzung} festzuhalten.\\
-    Es enthält Daten der Sitzung, sowie der gefundenen Defekte mit einer kurzen Beschreibung und der Schwere´.
+    Es enthält Daten der Sitzung, sowie der gefundenen Defekte mit einer kurzen Beschreibung und der Schwere.
     \item das zweite Protokoll enthält Daten, um die Inspektion \textbf{statistisch auszuwerten}. \\
     Bspw. wird der Prüfumfang notiert, sowie die beteiligten Inspektoren (anonymisiert) und ihre aufgewendete Zeit und die Anzahl der von ihnen gefundenen (schweren) Defekte gelistet; hierdurch läßt sich der Gesamtaufwand und die Effektivität ermitteln (vgl.~\cite[Abb. 3.2, 22]{Wed09c}).\\
     Diese Art der Protokolle helfen dem \textbf{Projektleiter} bei der Beurteilung hinsichtlich der Effektivität der Maßnahmen, und ob in einem Projekt viele Defekte gefunden worden sind.
 \end{enumerate}
 
+\noindent
 Die bereits erwähnten \textbf{Checklisten} sind Dokumente mit Listen von typischen Defekten, die dabei helfen können, systematisch die Defekte von Prüfgegenständen zu finden.\\
 Ein Beispiel für eine typische Checkliste zur Überprüfung von \textbf{Klassenmodellen} gibt \textit{Wedemann} in \cite[Abb. 3.3, 23]{Wed09c} an (s. Tabelle~\ref{tab:checkliste})
 
