--- a/docs/repetitorium/part four/Manuelle Verfahren/lernziele.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/lernziele.tex
@@ -2,7 +2,7 @@
 
 \begin{itemize}
     \item wissen, was manuelle Verfahren sind
-    \item doe verschiedenen manuellen Verfahren kennen
+    \item die verschiedenen manuellen Verfahren kennen
     \item den sinnvollen Einsatz der verschiedenen manuellen Verfahren kennen
     \item manuelle Verfahren durchführen können
 \end{itemize}
