docs: bibtex adjustments

--- a/docs/tests/einsendeaufgaben 3/literatur.bib
+++ b/docs/tests/einsendeaufgaben 3/literatur.bib
@@ -253,7 +253,7 @@ and Rundshagen, Michael",
 
 
 @book{Ull23,
-    title={Java ist auch eine Insel: Das umfassende Handbuch, 17. Auflage},
+    title={Java ist auch eine Insel},
     author={Ullenboom, Christian},
     publisher={Galileo Computing},
     isbn={978-3-8362-9544-4},
@@ -355,7 +355,7 @@ and Rundshagen, Michael",
 
 @book{Fow03b,
     author = {Fowler, Martin},
-    title = {UML Distilled: A Brief Guide to the Standard Object Modeling Language},
+    title = {UML Distilled},
     year = {2003},
     isbn = {0321193687},
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
@@ -366,7 +366,7 @@ and Rundshagen, Michael",
 
 @book{LG00,
     author = {Liskov, Barbara and Guttag, John},
-    title = {Program Development in Java: Abstraction, Specification, and Object-Oriented Design},
+    title = {Program Development in Java},
     year = {2000},
     isbn = {0201657686},
     publisher = {Addison-Wesley Longman Publishing Co., Inc.},
@@ -395,7 +395,7 @@ and Rundshagen, Michael",
 
 @book{BMRS96,
     author = {Buschmann, Frank and Meunier, Regine and Rohnert, Hans and Sommerlad, Peter and Stal, Michael},
-    title = {Pattern-Oriented Software Architecture - Volume 1: A System of Patterns},
+    title = {Pattern-Oriented Software Architecture - Volume 1},
     year = {1996},
     isbn = {0471958697},
     publisher = {Wiley Publishing},
