--- a/docs/repetitorium/part four/Manuelle Verfahren/inspektion.tex
+++ b/docs/repetitorium/part four/Manuelle Verfahren/inspektion.tex
@@ -38,9 +38,10 @@ Bei größeren Gruppen (mehrere Inspektoren bzw. mehrere Autoren) übernimmt ein
     \item die Inspektion wird durch den \textbf{Autor} ausgelöst, indem er die Fertigstellung an den \textbf{Moderator} meldet
     \item die Eingangsmeldung wird vom \textbf{Moderator} überprüft (Vollständigkeit, formale Richtigkeit); daraufhin verteilt er den \textbf{Prüfgegenstand} and die \textbf{Inspektoren}; Termine für Einführungs- und Inspektionssitzung werden geplant
     \item der \textbf{Moderator} hält Rücksprache mit den \textbf{Inspektoren}, ob sie mit den Inhalten des Prüfgegenstandes genug vertraut sind; in dem Fall muss eine Einführungssitzung, in der der \textbf{Autor} in den Prüfgegenstand einführt, nicht zwingend stattfinden
-    \item die \textbf{Inspektoren} untersuchen einzeln den Prüfgegenstand, ggfl. mit \textbf{Checklisten}
-    \item der \textbf{Leser} führt in der \textbf{Inspektionssitzung} systematisch durch den Prüfgegenstand; die Inspektoren tragen gefundene Defekte zusammen; der \textbf{Moderator} stellt sicher, dass keine Diskussionen über Behebungsmöglichkeiten entstehen, es finden nur Diskussionen statt, ob  es sich tatsächlich um Defekte handelt; die Dauer einer Inspektionssitzung ist auf max. $1.5$ - $3$h begrenzt
+    \item die \textbf{Inspektoren}, die keine Vorgesetzten der Autoren sein dürfen, untersuchen einzeln den Prüfgegenstand, ggfl. mit \textbf{Checklisten}
+    \item einer der Inspektoren, der \textbf{Leser},  führt in der \textbf{Inspektionssitzung} systematisch durch den Prüfgegenstand; die Inspektoren tragen gefundene Defekte zusammen; der \textbf{Moderator} stellt sicher, dass keine Diskussionen über Behebungsmöglichkeiten entstehen, es finden nur Diskussionen statt, ob  es sich tatsächlich um Defekte handelt; die Dauer einer Inspektionssitzung ist auf max. $1.5$ - $3$h begrenzt
     \item eine \textbf{Freigabe} des Prüfgegenstandes erfolgt, falls nur wenige Defekte gefunden worden, und der \textbf{Moderator} die Behebung überprüft hat; gravierende Defekte bedingen eine erneute Inspektionssitzung
+    \item die \textbf{Protokollierung} der Sitzungen übernimmt in kleineren Gruppen der Moderator, in größeren ein \textbf{dedizierter Protokollführer}
 \end{enumerate}
 
 \begin{tcolorbox}[colback=white]
@@ -51,7 +52,7 @@ Bei größeren Gruppen (mehrere Inspektoren bzw. mehrere Autoren) übernimmt ein
 \begin{figure}
     \centering
     \includegraphics[scale=0.4]{part four/Manuelle Verfahren/img/inspektion}
-    \caption{Skizzenhafte Darstellung des Ablaufs von Inspektionen und der damit verbundenen Rollen und ihrer Aufgaben. (Quelle: eigene)}
+    \caption{Skizzenhafte Darstellung des Ablaufs von Inspektionen und der damit verbundenen Rollen und ihrer Aufgaben. Nicht aufgeführt in der Darstellung ist die Protokollierung, die in kleineren Gruppen der Moderator übernimmt, ansonsten ein dedizierter Protokollführer. (Quelle: eigene)}
     \label{fig:inspektion}
 \end{figure}
 
