docs: update wording and formatting

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/einleitung.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/einleitung.tex
@@ -5,13 +5,13 @@ Ihr Nachteil ist, dass ihre Durchführung sehr aufwändig ist.\\
 Außerdem stellen manche Prüfarten für Menschen eher eintönige und fehleranfällige Tätigkeiten dar.\\
 
 \noindent
-Verschiedene Arten von Analysen können mit extra dafür entwickelten Werkzeugen automatisiert erfolgen, und lassen sich damit damit effizienter und zuverlässiger erledigen (vgl.~\cite[27]{Wed09c})
+Verschiedene Arten von Analysen können mit extra dafür entwickelten Werkzeugen automatisiert erfolgen, und lassen sich damit damit effizienter und zuverlässiger erledigen (vgl.~\cite[27]{Wed09c}).
 
 \noindent
-Mit Hilfe der \textbf{werkzeuggestützten Analyse} kann u.a
+Mit Hilfe der \textbf{werkzeuggestützten Analyse}
 
 \begin{itemize}
-    \item die \textbf{Einhaltung von Programmierrichtlinien} überprüft werden
-    \item nach \textbf{verdächtigen Mustern} im Code gesucht werden
-    \item Defekte im Code aufspüren, die durch Fehlersituationen in Programmabläufen entstehen
+    \item kann die \textbf{Einhaltung von Programmierrichtlinien} überprüft werden
+    \item kann nach \textbf{verdächtigen Mustern} im Code gesucht werden
+    \item können Defekte im Code aufgespürt werden, die durch Fehlersituationen in Programmabläufen entstehen
 \end{itemize}
