docs: update wording and formatting

--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/hilfsmittel kontrollflussgraph.tex
@@ -1,5 +1,5 @@
 \section{Hilfsmittel Kontrollflussgraph}\label{sec:hilfsmittel-kontrollflussgraph}
-Ein wichtiges Hilfsmittel ist der \textbf{Kontrollflussgraph}, der für die \textbf{Datenflussanomalieanalyse}, bestimmte \textbf{MEtriken} sowie einigen \textbf{Überdeckungskriterien} benötigt wird.
+Ein wichtiges Hilfsmittel ist der \textbf{Kontrollflussgraph}, der für die \textbf{Datenflussanomalieanalyse}, bestimmte \textbf{Metriken} sowie einigen \textbf{Überdeckungskriterien} (s. Abschnitt~\ref{sec:strukturorientierte-testverfahren}) benötigt wird.
 
 \begin{tcolorbox}[title=Kontrollflussgraph]
     \blockquote[{\cite[32, Hervorhebung eigene]{Wed09c}}]{
