--- a/docs/repetitorium/part four/Werkzeuggestützte Analyse/programmierrichtlinien.tex
+++ b/docs/repetitorium/part four/Werkzeuggestützte Analyse/programmierrichtlinien.tex
@@ -7,7 +7,7 @@ Die \textbf{Einhaltung von Programmierrichtlinien} ist eine naheliegende Aufgabe
 s. \url{https://www.oracle.com/java/technologies/javase/codeconventions-introduction.html}, abgerufen 24.05.2024
 }) vorgegeben sein.\\
 
-\begin{tcolorbox}
+\begin{tcolorbox}[colback=white]
 Die Einhaltung von Programmierrichtlinien ist wichtig für die \textbf{Qualitätsforderung} \textbf{Wartbarkeit}: \textbf{Wartbarkeit} setzt auch voraus, dass der Code verständlich und damit einfach lesbar ist.
 \end{tcolorbox}
 \vspace{2mm}
